[package]
name = "mysh-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.133"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]
