[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
futures = "0.3.31"
log = "0.4.22"
once_cell = "1.20.2"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]
